<resources>
    <string name="app_name">实验助手</string>
    <string name="find_zongpaihang">总排行</string>
    <string name="find_benzhoubaipang">本周排行</string>
    <string name="search_hint">搜索答案</string>
    <string name="ta_ans_label">她的回答：%s</string>
    <string name="qr_android_hint">安卓系统请用QR扫描器扫描以上二维码，\n即刻下载实验助手</string>
    <string name="qr_ios_hint">IOS系统请用QR扫描器扫描以上二维码，\n即刻下载实验助手</string>
    <string name="login_description">马上登录实验助手，建设属于自己的实验圈</string>
    <string name="settings_editnickname_hint">助手贴士：不建议频繁修改昵称，昵称诚可贵，且改且珍惜</string>
    <string name="settings_shimingrenzheng_hint">助手贴士：准确填写认证信息，以便以后工作人员与你确认核实，实名认证后你可以享受：积分翻倍，实名认证标识，显示认证信息，商城高级礼品换购等特权</string>
    <string name="settings_xiugainicheng">修改昵称</string>
    <string name="settings_shimingrenzheng">实名认证</string>
    <string name="settings_xiugaimima">修改密码</string>
    <string name="settings_change_phone">更换注册手机号码</string>
    <string name="settings_xiaoxishezhi">消息设置</string>
    <string name="settings_fenxianggeipengyou">分享给朋友们</string>
    <string name="settings_saoyisaoxiazai">扫一扫下载</string>
    <string name="settings_bangdingshoujihao">绑定手机号</string>
    <string name="settings_guanyuruanjian">关于软件</string>
    <string name="settings_bangzhu">帮助</string>
    <string name="settings_jianchaxinbanben">检查新版本</string>
    <string name="settings_tuichuzhanghao">退出账号</string>
    <string name="lb_realname">真实姓名｜</string>
    <string name="lb_danwei">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位｜</string>
    <string name="lb_zhiwu">职&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;务｜</string>
    <string name="lb_phone">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机｜</string>
    <string name="lb_email">电子邮箱｜</string>
    <string name="lb_shimingrenzheng">实名认证｜</string>
    <string name="lb_renzhengxinxi">认证信息｜</string>
    <string name="baoming_zhiliao">报名人资料</string>
    <string name="lb_place">邮寄地址｜</string>
    <string name="baoming_lianxiren">联&#160;&#160;系&#160;&#160;人｜</string>
    <string name="baoming_shouji">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机｜</string>
    <string name="baoming_danwei">单位信息｜</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="forget_password">忘记密码</string>
    <string name="regist">注册</string>
    <string name="bund_phonenumber">请输入您的手机号</string>
    <string name="input_cons">请输入验证码</string>
    <string name="alter_password">修改密码</string>
    <string name="submit">提交</string>
    <string name="input_password">请输入密码</string>
    <string name="input_oldpassword">旧密码:</string>
    <string name="gender">性&#032;别&#032;|&#032;</string>
    <string name="gender_man">男</string>
    <string name="gender_woman">女</string>
    <string name="input_recommender">推荐人</string>
    <string name="agreement">注册实验助手，就表示你同意</string>
    <string name="agreement_append">《实验助手使用条款和隐私政策》</string>
    <string name="actionbar_title_myquestion">我的提问</string>
    <string name="tabs_shiwuliping">实物礼品</string>
    <string name="tabs_xuexiziliao">学习资料</string>
    <string name="myquestion_default">屈臣氏有没有深层清洁的面膜，推荐一下</string>
    <string name="myquestion_default_timebefore">20分钟</string>
    <string name="myquestion_invite">邀请...进行回答</string>
    <string name="myquestion_mark">标签：护肤，化妆，美容</string>
    <string name="myquestion_answer_number">3人回答</string>
    <string name="myquestion_suggetion">记得采纳答案哦，可以获得5积分哦</string>
    <string name="answer_time_before">20分钟前</string>
    <string name="actionbar_title_myanswer">我的回答</string>
    <string name="answer_sugesstion">记得采纳答案哦，有5个积分</string>
    <string name="default_answer">我的美丽日记，雅诗兰黛等。</string>
    <string name="default_recommend">膜法世界，我的美丽日记，VC左旋等</string>
    <string name="default_name_level">James lv1</string>
    <string name="default_recommend_question">原问题，那种品牌的面膜效果好?</string>
    <string name="activite_xitongxiaoxi">系统消息</string>
    <string name="activite_jifenxiangqing">积分列表</string>
    <string name="activite_zhichiwode">支持我的</string>
    <string name="isfinish_newtask">你完成了一项新手任务</string>
    <string name="sysinfo_show">恭喜你，你完成了新手任务,奖励10分</string>
    <string name="activity_guanzhuxiaoxi">关注消息</string>
    <string name="frame_title_my_favorite">我关注的</string>
    <string name="frame_title_favorite_me">关注我的</string>
    <string name="frame_title_favorites_answer">问答</string>
    <string name="frame_title_favorites_article">文章</string>
    <string name="activity_woganxingqde">我感兴趣的</string>
    <string name="myinterst">微生物</string>
    <string name="activity_renwuchengjiu">任务成就</string>
    <string name="day_task">每天任务</string>
    <string name="oneday_question">每天回答1个问题</string>
    <string name="jiangli">奖励:</string>
    <string name="add_score">+10分</string>
    <string name="activity_wodewupin">我的物品</string>
    <string name="frame_title_shiwulipin">实物礼品</string>
    <string name="frame_title_xuexiziliao">学习资料 </string>
    <string name="frame_title_myanswerafter">我的追问</string>
    <string name="frame_title_beanswerafter">追问我的 </string>
    <string name="funs_name">Amy</string>
    <string name="ask_title">全部问题</string>
    <string name="ask_left">筛选</string>
    <string name="find_title">发现</string>
    <string name="me_title">个人中心</string>
    <string name="me_left">问题反馈</string>
    <string name="me_right">设置</string>
    <string name="back">返回</string>
    <string name="title_more">更多</string>
    <string name="title_share">分享到</string>
    <string name="main_menu_login">登录</string>
    <string name="main_menu_logout">注销</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_software">开源软件</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_post">发表</string>
    <string name="main_menu_today">每日一句</string>
    <string name="main_menu_more">更多</string>
    <string name="main_menu_send">确定</string>
    <string name="main_menu_sweep">扫一扫</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">设置</string>
    <string name="main_menu_exit">退出应用</string>
    <string name="detail_menu_unfavorite">取消收藏</string>
    <string name="detail_menu_favorite">收藏</string>
    <string name="detail_menu_for_share">分享</string>
    <string name="detail_menu_for_report">举报</string>
    <string name="image_menu_download">保存</string>
    <string name="frame_title_news_lastest">最新资讯</string>
    <string name="frame_title_news_blog">最新博客</string>
    <string name="frame_title_news_recommend">推荐阅读</string>
    <string name="frame_title_question_ask">问答</string>
    <string name="frame_title_question_share">分享</string>
    <string name="frame_title_question_other">综合</string>
    <string name="frame_title_question_job">职业</string>
    <string name="frame_title_question_site">站务</string>
    <string name="frame_title_tweet_ask">网友提问</string>
    <string name="frame_title_tweet_help">粉丝求助</string>
    <string name="frame_title_tweet_my">我的动弹</string>
    <string name="frame_title_tweet_send">动弹一下</string>
    <string name="frame_title_active_lastest">最新动态</string>
    <string name="frame_title_active_atme">\@我</string>
    <string name="frame_title_active_comment">评论</string>
    <string name="frame_title_active_myself">我自己</string>
    <string name="frame_title_active_message">留言</string>
    <string name="frame_title_friend_following">关注</string>
    <string name="frame_title_friend_follower">粉丝</string>
    <string name="frame_title_favorite_software">软件</string>
    <string name="frame_title_favorite_post">话题</string>
    <string name="frame_title_favorite_code">代码</string>
    <string name="frame_title_favorite_blog">博客</string>
    <string name="frame_title_favorite_news">资讯</string>
    <string name="frame_title_software_catalog">分类</string>
    <string name="frame_title_software_recommend">推荐</string>
    <string name="frame_title_software_lastest">最新</string>
    <string name="frame_title_software_hot">热门</string>
    <string name="frame_title_software_china">国产</string>
    <string name="tab_name_article">首页</string>
    <string name="tab_name_question">等你答</string>
    <string name="tab_name_createquestion">提问</string>
    <string name="tab_name_tweet">发现</string>
    <string name="tab_name_me">我</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="loading">加载中…</string>
    <string name="publish_comment">写点什么吧</string>
    <string name="software_license">开源协议 :</string>
    <string name="software_language">开发语言 :</string>
    <string name="software_os">操作系统 :</string>
    <string name="software_recordtime">收录时间 :</string>
    <string name="software_index">软件首页</string>
    <string name="software_download">软件下载</string>
    <string name="software_document">软件文档</string>
    <string name="from_mobile">来自:手机</string>
    <string name="from_android">来自:Android</string>
    <string name="from_iphone">来自:Iphone</string>
    <string name="from_windows_phone">来自:Windows Phone</string>
    <string name="from_wechat">来自:微信</string>
    <string name="unlogin">未登录</string>
    <string name="unlogin_tip">您还未登录\r\n点击屏幕登录</string>
    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密&#032;码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="yin_si_zheng_ce">使用条款和隐私政策</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录.</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="actionbar_title_news">资讯</string>
    <string name="actionbar_title_blog">博客</string>
    <string name="actionbar_title_software">软件</string>
    <string name="actionbar_title_question">帖子</string>
    <string name="actionbar_title_tweet">动弹</string>
    <string name="actionbar_title_detail">xx的提问</string>
    <string name="actionbar_title_supperlist">"@邀请回答"</string>
    <string name="tip_logout_success">注销成功.</string>
    <string name="actionbar_title_sale">收货人资料</string>
    <string name="active_nicheng">昵称</string>
    <string name="active_jifen">积分</string>
    <string name="active_renzhengqingkuang">认证情况</string>
    <string name="active_zhushouhao">助手号</string>
    <string name="lb_zhichi">支持(%s)</string>
    <string name="lb_zhuiwen">追问 (%s)</string>
    <string name="active_tiwen">提问</string>
    <string name="active_huida">回答</string>
    <string name="active_beicaina">被采纳</string>
    <string name="active_fensishu">粉丝数</string>
    <string name="active_wodetiwen">我的提问</string>
    <string name="comment_count">%s</string>
    <string name="by_ask">邀请 %s 回答</string>
    <string name="rank_detail">标签:%s</string>
    <string name="nickname">昵&#032;称&#032;|</string>
    <string name="verify_code">验证码|</string>
    <string name="recmend">推荐人|</string>
    <string name="question_detail_surport">支持 121</string>
    <string name="apart_line">|</string>
    <string name="ask_again">追问 1</string>
    <string name="question_detail_adopt">记得采纳满意的答案哦！可以获得5积分，有悬赏分则返回百分之二十</string>
</resources>