<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/list_item_background_normal"
    android:orientation="vertical"
    android:padding="8dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:minWidth="50dp"
            android:text="@string/app_name"
            android:textColor="@color/main_gray"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/tv_time"
            android:text="@string/app_name"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_16" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_5" >

        <TextView
            android:id="@+id/tv_byask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_ask"
            android:textColor="@color/main_gray"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_byrank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_byask"
            android:text="@string/rank_detail"
            android:textColor="@color/main_gray"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/myquestion_question"
            android:text="@string/comment_count"
            android:textColor="@color/main_gray"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

</LinearLayout>