<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_day_task"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_40"
        android:layout_marginLeft="@dimen/space_10"
        android:gravity="center_vertical"
        android:hint="@string/day_task"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_60"
        android:layout_marginTop="@dimen/space_1"
        android:background="@drawable/rectangle_item"
        android:orientation="horizontal"
        android:padding="@dimen/space_2" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_oneday_answer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_30"
                android:hint="@string/oneday_question"
                android:paddingLeft="@dimen/space_10"
                android:paddingTop="@dimen/space_10"
                android:textStyle="bold" />
            <!-- 奖励加10分 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/space_25"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_jiangli"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/space_20"
                    android:hint="@string/jiangli"
                    android:paddingLeft="@dimen/space_10"
                    android:textSize="@dimen/space_14" />

                <TextView
                    android:id="@+id/tv_jiafen"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/space_20"
                    android:paddingLeft="@dimen/space_10"
                    android:text="@string/add_score"
                    android:textColor="@color/red"
                    android:textSize="@dimen/space_14" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/click_obtain"
            android:layout_width="@dimen/space_60"
            android:layout_height="@dimen/space_30"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:background="@drawable/click_obtain" />
    </LinearLayout>

</LinearLayout>