<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- 矩形内部的布局 -->

    <LinearLayout
        android:id="@+id/ll_myanswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:paddingBottom="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_myanswer_timebefore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:orientation="horizontal" >

            <!-- 问题 -->

            <TextView
                android:id="@+id/tv_detail_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/myquestion_default" >
            </TextView>
            <!-- 是否解决的图标 -->

            <ImageView
                android:id="@+id/iv_detail_isResolved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@null"
                android:src="@drawable/resolved" >
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_16"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TextView>
            <!-- 问题解决的时间 -->
            <!-- 问题解决的时间 -->

            <TextView
                android:id="@+id/tv_detail_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:hint="@string/myquestion_default_timebefore"
                android:paddingRight="@dimen/space_10"
                android:paddingTop="@dimen/space_1"
                android:textSize="@dimen/space_12" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_weight="1"
                android:orientation="vertical" >

                <!-- 邀请superlist -->

                <TextView
                    android:id="@+id/tv_detail_invite_who"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/myquestion_invite"
                    android:textSize="@dimen/space_14" />
                <!-- 标签 -->

                <TextView
                    android:id="@+id/tv_detail_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/myquestion_mark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_10"
                android:layout_weight="0"
                android:orientation="horizontal" >

                <!-- 几人回答的图标 -->

                <ImageView
                    android:id="@+id/iv_detail_answernumber"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/space_16"
                    android:layout_marginBottom="@dimen/space_1"
                    android:contentDescription="@null"
                    android:src="@drawable/myquestion_question" />
                <!-- 几人回答 -->

                <TextView
                    android:id="@+id/tv_detail_answernumber"
                    android:layout_marginLeft="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/space_16"
                    android:hint="@string/myquestion_answer_number" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- 中间的TextView -->

    <TextView
        android:id="@+id/tv_adopt_suggestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:hint="@string/question_detail_adopt" />

</LinearLayout>